==> ejgeiger/micropython/ports/mimxrt/modmachine.c <==
#include "py/runtime.h"
#include "drivers/dht/dht.h"
#include "extmod/modmachine.h"
#include "shared/runtime/pyexec.h"
#include "led.h"
#include "pin.h"
#include "modmachine.h"
#include "fsl_gpc.h"
#include "fsl_soc_src.h"
#include "fsl_src.h"
#include "fsl_wdog.h"
#include "fsl_romapi.h"
#include "fsl_dcdc.h"
#include CPU_HEADER_H
#include CLOCK_CONFIG_H

STATIC mp_obj_t machine_freq(size_t n_args, const mp_obj_t *args) {
    if (n_args == 0) {
        return MP_OBJ_NEW_SMALL_INT(mp_hal_get_cpu_freq());
    } else {
        uint32_t freq = mp_obj_get_int(args[0]);
        #if defined(MIMXRT106x_SERIES) || defined(MIMXRT105x_SERIES)
        clock_arm_pll_config_t armPllConfig_BOARD_BootClockRUN = {
            .loopDivider = 100,  // PLL loop divider, Fout = Fin * loopDivider / 2
            .src = 0,            // Bypass clock source, 0 - OSC 24M, 1 - CLK1_P and CLK1_N
        };
        if (freq == (BOARD_BOOTCLOCKRUN_CORE_CLOCK / 4)) {
            armPllConfig_BOARD_BootClockRUN.loopDivider = 75; // 900 MHz
            CLOCK_InitArmPll(&armPllConfig_BOARD_BootClockRUN);
            CLOCK_SetDiv(kCLOCK_ArmDiv, 5);  // 150 MHz
            CLOCK_SetDiv(kCLOCK_IpgDiv, 2);  // 50 MHz
            CLOCK_SetDiv(kCLOCK_PerclkDiv, 0);  // 50 Mhz
            // Setting the VDD_SOC to 1.15V (< 528Mhz)
            DCDC_AdjustRunTargetVoltage(DCDC, 0x0e);
        } else if (freq == (BOARD_BOOTCLOCKRUN_CORE_CLOCK / 2)) {
            armPllConfig_BOARD_BootClockRUN.loopDivider = 75;
            CLOCK_InitArmPll(&armPllConfig_BOARD_BootClockRUN);
            CLOCK_SetDiv(kCLOCK_ArmDiv, 2);  // 300 MHz
            CLOCK_SetDiv(kCLOCK_IpgDiv, 2);  // 100 MHz
            CLOCK_SetDiv(kCLOCK_PerclkDiv, 1);  // 50 Mhz
            // Setting the VDD_SOC to 1.15V (< 528Mhz)
            DCDC_AdjustRunTargetVoltage(DCDC, 0x0e);
        } else if (freq == BOARD_BOOTCLOCKRUN_CORE_CLOCK) {
            // Setting the VDD_SOC to 1.275V. for full speed.
            DCDC_AdjustRunTargetVoltage(DCDC, 0x13);
            armPllConfig_BOARD_BootClockRUN.loopDivider = 100;  // 1200 MHz
            CLOCK_InitArmPll(&armPllConfig_BOARD_BootClockRUN);
            CLOCK_SetDiv(kCLOCK_IpgDiv, 3);  // 150 MHz
            CLOCK_SetDiv(kCLOCK_PerclkDiv, 1);  // 75 MHz
            CLOCK_SetDiv(kCLOCK_ArmDiv, 1);  // 600 MHz
        } else {
            mp_raise_ValueError(MP_ERROR_TEXT("invalid frequency"));
        }
        #elif defined(MIMXRT102x_SERIES) || defined(MIMXRT101x_SERIES)
        if (freq == (BOARD_BOOTCLOCKRUN_CORE_CLOCK / 4)) {
            CLOCK_SetDiv(kCLOCK_AhbDiv, 3);  // 125 MHz
            CLOCK_SetDiv(kCLOCK_IpgDiv, 1);  // 62.5 MHz
            CLOCK_SetDiv(kCLOCK_PerclkDiv, 0);  // 62.5 MHz
            // Setting the VDD_SOC to 1.15V (< 528Mhz)
            DCDC_AdjustRunTargetVoltage(DCDC, 0x0e);
        } else if (freq == (BOARD_BOOTCLOCKRUN_CORE_CLOCK / 2)) {
            CLOCK_SetDiv(kCLOCK_AhbDiv, 1);  // 250 MHz
            CLOCK_SetDiv(kCLOCK_IpgDiv, 1);  // 125 MHz
            CLOCK_SetDiv(kCLOCK_PerclkDiv, 1);  // 62.5 MHz
            DCDC_AdjustRunTargetVoltage(DCDC, 0x0e);
        } else if (freq == BOARD_BOOTCLOCKRUN_CORE_CLOCK) {
            // Setting the VDD_SOC to 1.275V
            DCDC_AdjustRunTargetVoltage(DCDC, 0x13);
            CLOCK_SetDiv(kCLOCK_IpgDiv, 3);  // 125 MHz
            CLOCK_SetDiv(kCLOCK_PerclkDiv, 1);  // 62.5 MHz
            CLOCK_SetDiv(kCLOCK_AhbDiv, 0);  // 500 MHz
        } else {
            mp_raise_ValueError(MP_ERROR_TEXT("invalid frequency"));
        }
        #elif defined(MIMXRT117x_SERIES)
        if (freq > 100000000) {
            freq /= 1000000;
        }
        if (freq >= 156 && freq <= 996) {
            clock_root_config_t rootCfg = {0};
            // First set the CPU to a safe source
            rootCfg.mux = kCLOCK_M7_ClockRoot_MuxOscRc400M;
            rootCfg.div = 1;
            CLOCK_SetRootClock(kCLOCK_Root_M7, &rootCfg);
            // Change the ARMPLL freq
            CLOCK_InitArmPllWithFreq(freq);
            // Enable it
            rootCfg.mux = kCLOCK_M7_ClockRoot_MuxArmPllOut;
            CLOCK_SetRootClock(kCLOCK_Root_M7, &rootCfg);
        } else {
            mp_raise_ValueError(MP_ERROR_TEXT("invalid frequency"));
        }
        #endif
        return mp_const_none;
    }
}

STATIC mp_obj_t machine_deepsleep(size_t n_args, const mp_obj_t *args) {
    if (n_args != 0) {
        mp_int_t seconds = mp_obj_get_int(args[0]) / 1000;
        if (seconds > 0) {
            machine_rtc_alarm_helper(seconds, false);
            #ifdef MIMXRT117x_SERIES
            GPC_CM_EnableIrqWakeup(GPC_CPU_MODE_CTRL_0, SNVS_HP_NON_TZ_IRQn, true);
            #else
            GPC_EnableIRQ(GPC, SNVS_HP_WRAPPER_IRQn);
            #endif
        }
    }

    #ifdef MIMXRT117x_SERIES
    machine_pin_config(pin_WAKEUP_DIG, PIN_MODE_IT_RISING, PIN_PULL_DISABLED, PIN_DRIVE_OFF, 0, PIN_AF_MODE_ALT5);
    GPC_CM_EnableIrqWakeup(GPC_CPU_MODE_CTRL_0, GPIO13_Combined_0_31_IRQn, true);
    #elif defined IOMUXC_SNVS_WAKEUP_GPIO5_IO00
    machine_pin_config(pin_WAKEUP, PIN_MODE_IT_RISING, PIN_PULL_DISABLED, PIN_DRIVE_OFF, 0, PIN_AF_MODE_ALT5);
    GPC_EnableIRQ(GPC, GPIO5_Combined_0_15_IRQn);
    #endif

    SNVS->LPCR |= SNVS_LPCR_TOP_MASK;

    while (true) {
        ;
    }

    return mp_const_none;
}

NORETURN mp_obj_t machine_bootloader(size_t n_args, const mp_obj_t *args) {
    #if defined(MICROPY_BOARD_ENTER_BOOTLOADER)
    // If a board has a custom bootloader, call it first.
    MICROPY_BOARD_ENTER_BOOTLOADER(n_args, args);
    #elif FSL_ROM_HAS_RUNBOOTLOADER_API
    // If not, enter ROM bootloader in serial downloader / USB mode.
    uint32_t arg = 0xEB110000;
    ROM_RunBootloader(&arg);
    #else
    // No custom bootloader, or run bootloader API, then just reset.
    WDOG_TriggerSystemSoftwareReset(WDOG1);
    #endif
    while (1) {
        ;
    }
}
